// Generated by PBufGeneratorProcessor
// Source File: org/glassfish/hk2/xml/test/pbuf/pc1/PBufPrecompileChild.java

syntax = "proto3";

package org.glassfish.hk2.xml.test.pbuf.pc1;

message PBufPrecompileChild {

    int64 jtype = 1;

    int32 SType = 2;

    bool ZType = 3;

    bool ZType2 = 4;
}

