// Generated by PBufGeneratorProcessor
// Source File: org/glassfish/hk2/xml/test/pbuf/pc1/ThingTwoBean.java

syntax = "proto3";

package org.glassfish.hk2.xml.test.pbuf.pc1;

message ThingTwoBean {
}

