// Generated by PBufGeneratorProcessor
// Source File: org/glassfish/hk2/xml/test/pbuf/pc2/PBufPrecompileChild2.java

syntax = "proto3";

package org.glassfish.hk2.xml.test.pbuf.pc2;

import "org/glassfish/hk2/xml/test/pbuf/pc2/TypeBean.proto";

message PBufPrecompileChild2 {

    bool z_type = 1;

    int32 btype = 2;

    org.glassfish.hk2.xml.test.pbuf.pc2.TypeBean types = 3;
}

